test-project/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-project
  name: test-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-demo
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: test-project
    spec:
      containers:
      - image: 'gcr.io/heptio-images/ks-guestbook-demo:0.1'
        imagePullPolicy: Always
        name: test-project
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
        resources: {}
