test-project/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-project-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: ""
  type: ClusterIP
