test-project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-project-ingress
spec:
  ingressClass: nginx
  rules:
    - host: www.rolanlocalhost.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: test-project-svc
              port:
                number: 80
